# arch

./: .gitignore  AGENT.md  AGENTS.md  PROJECT.md  architect.toml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  MIGRATION.md  README.md
src/architect/: __main__.py  cli.py  config.py  supervisor.py
src/architect/backends/: __init__.py  base.py  claude.py  codex.py  codex_sdk.py  resilient.py
src/architect/prompts/: __init__.py  coder.md  critic.md  documenter.md  planner.md  supervisor.md  tester.md
src/architect/specialists/: __init__.py  base.py  coder.py  critic.py  documenter.py  planner.py  supervisor_agent.py  tester.py
src/architect/state/: __init__.py  git_notes.py  patches.py
tests/: test_backends.py  test_cli_integration.py  test_config.py  test_patches.py  test_specialists.py  test_state.py  test_supervisor.py
